--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
   <p>Nothing to see here...</p>
+  <div style="width: 55px;height: 55px;background: yellow;">
+  </div>
   <!-- Project -->
   <script src="main.js"></script>
 </body>
