--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <p>Nothing to see here...</p>
   <div style="width: 55px;height: 55px;background: yellow;">
   </div>
+  <RebyB>logo</RebyB>
   <!-- Project -->
   <script src="main.js"></script>
 </body>
